@@ -1,6 +1,7 @@
 package uk.gov.companieshouse.overseasentitiesapi.model;
 
 import org.bson.Document;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -13,6 +14,8 @@ import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.convert.MappingMongoConverter;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.test.context.ActiveProfiles;
+import org.testcontainers.junit.jupiter.Testcontainers;
+import uk.gov.companieshouse.overseasentitiesapi.configuration.AbstractMongoConfig;
 import uk.gov.companieshouse.overseasentitiesapi.converter.DocumentTransformerFactory;
 import uk.gov.companieshouse.overseasentitiesapi.mapper.OverseasEntityDtoDaoMapper;
 import uk.gov.companieshouse.overseasentitiesapi.model.dao.OverseasEntitySubmissionDao;
@@ -41,29 +44,30 @@ import static uk.gov.companieshouse.overseasentitiesapi.configuration.MongoConve
  * If any of the tests in this class start failing it's likely due to a DTO model structure change which is an indication
  * of potential - current or future - issues for clients that still need to be able to work with Mongo records created
  * using older versions of the data model.
- *
+ * <p>
  * If the data model structure has been modified, consideration needs to be given to how the web - and other -
  * clients of the OE API end-points will deal with older versions of the model structure and ultimately how older
  * versions of the model structure can be loaded into the newly changed DAO and DTO models. Among other things, a new,
  * Mongo, custom 'transformer' class may need to be written.
- *
+ * <p>
  * If a non-breaking change to the model has been made - e.g. a new data field has simply been added to a DTO and DAO -
  * the 'current' test JSON file needs updating to avoid a null check failure (this essentially future-proofs the test,
  * which will potentially fail if the datatype of the newly added field ever changes).
- *
+ * <p>
  * If a breaking change to the model has been made - e.g. a data field has changed its type from String to a custom POJO -
  * after a new 'transformer' has been implemented and a new <code>SchemaVersion</> enum value added, a file with the new
  * JSON model structure should be added to the test resources folder and the <code>OLD_JSON_MODEL_FILENAMES</code> and
  * <code>CURRENT_JSON_MODEL_FILENAME</code> constants updated, in order that the new, up-to-date DAO/DTO structure is
  * fully tested.
- *
+ * <p>
  * Finally, note the use of Spring profiles, to ensure that the (default) <code>MongoConfig</code> configuration is not
  * loaded during this test (as the specific in-memory Mongo DB config needs to be picked up).
  */
+@Testcontainers
 @AutoConfigureDataMongo
 @SpringBootTest
 @ActiveProfiles("test")
-class DtoModelChangeTest {
+class DtoModelChangeTest extends AbstractMongoConfig {
 
     private static final Logger LOGGER = Logger.getLogger(DtoModelChangeTest.class.getName());
 
@@ -99,6 +103,11 @@ class DtoModelChangeTest {
 
     @Autowired
     private DocumentTransformerFactory transformerFactory;
+
+    @BeforeAll
+    static void setup() {
+        mongoDBContainer.start();
+    }
 
     @BeforeEach
     void removeAllMongoRecords() {
@@ -149,7 +158,7 @@ class DtoModelChangeTest {
         // Not null checks on other fields are run for the current (up-to-date) JSON example using the
         // checkNoDtoModelFieldsAreNull() method.
 
-        OverseasEntitySubmissionDao dao = submissions.get(0);
+        OverseasEntitySubmissionDao dao = submissions.getFirst();
         assertNotNull(dao);
         assertNotNull(dao.getEntityName());
         assertEquals(ENTITY_NAME, dao.getEntityName().getName());
@@ -203,7 +212,7 @@ class DtoModelChangeTest {
                             if (nestedDtoObject instanceof Map) {
                                 ((Map) nestedDtoObject).forEach((key, value) -> checkNoDtoModelFieldsAreNull(value));
                             } else if (nestedDtoObject instanceof List) {
-                                ((List) nestedDtoObject).forEach((value) -> checkNoDtoModelFieldsAreNull(value));
+                                ((List) nestedDtoObject).forEach(this::checkNoDtoModelFieldsAreNull);
                             } else {
                                 checkNoDtoModelFieldsAreNull(nestedDtoObject);
                             }
@@ -217,11 +226,9 @@ class DtoModelChangeTest {
     }
 
     private boolean isAListOrMapOfStrings(Object dto) {
-        if (dto instanceof List) {
-            List list = (List) dto;
-            return !list.isEmpty() && list.get(0) instanceof String;
-        } else if (dto instanceof Map) {
-            Map map = (Map) dto;
+        if (dto instanceof List list) {
+            return !list.isEmpty() && list.getFirst() instanceof String;
+        } else if (dto instanceof Map map) {
             return !map.isEmpty() && map.get(map.keySet().iterator().next()) instanceof String;
         }
 
